--- a/src/components/organisms/NavBar.module.scss
+++ b/src/components/organisms/NavBar.module.scss
@@ -1,11 +1,10 @@
 .NavBar {
   height: var(--navBarHeight);
   width: 100%;
-  background-color: #056297;
+  background-color: var(--primaryColor);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
