prepared json data, add time entry

--- a/src/components/molecules/TimeRow/TimeRow.module.scss
+++ b/src/components/molecules/TimeRow/TimeRow.module.scss
@@ -1,18 +1,8 @@
-@mixin mobile-only {
-  @media (max-width: 786px) {
-    @content;
-  }
-}
-
 .TimeRow {
   display: grid;
   gap: var(--space100);
   align-items: center;
-  grid-template-columns: 250px repeat(3, 60px);
-
-  @include mobile-only {
-    grid-template-columns: 150px repeat(3, 60px);
-  }
+  grid-template-columns: minmax(150px, 250px) repeat(3, 60px);
 }
 
 .alignCenter {
