--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,10 +1,5 @@
-@mixin mobile-only {
-  @media (max-width: 786px) {
-    @content;
-  }
-}
-.Home {
-  padding: var(--space400);
+.main {
+  padding: var(--space500);
 }
 
 .TimeInputsWrapper {
@@ -13,5 +8,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: var(--space300);
+  gap: var(--space400);
 }
