--- a/src/components/atoms/Button/Button.module.scss
+++ b/src/components/atoms/Button/Button.module.scss
@@ -1,4 +1,7 @@
 .main {
+  display: inline-flex;
+  gap: var(--space300);
+  align-items: center;
   font-size: var(--fontSize);
   background-color: var(--primaryColor);
   color: var(--primaryTextColor);
@@ -13,8 +16,14 @@
   &:hover {
     background-color: var(--primaryHoverColor);
   }
+  svg {
+    font-size: 0.8em;
+  }
 }
 .size {
+  &__600 {
+    font-size: var(--fontSize600);
+  }
   &__700 {
     font-size: var(--fontSize700);
   }
