--- a/src/components/atoms/TextField/TextField.module.scss
+++ b/src/components/atoms/TextField/TextField.module.scss
@@ -1,20 +1,32 @@
 .main {
-  padding: var(--space200);
-  // border: 0;
-  border: var(--border);
-  border-radius: var(--borderRadius);
-  transition: var(--transition300);
+  display: inline-flex;
+  input {
+    width: 100%;
+    padding: var(--space200);
+    // border: 0;
+    border: var(--border);
+    border-radius: var(--borderRadius);
+    transition: var(--transition300);
 
-  &:hover {
-    border: 1px solid var(--blue300);
-  }
+    &:hover {
+      border: 1px solid var(--blue300);
+    }
 
-  &:focus {
-    outline: none;
-    box-shadow: 0 0 0px 1px var(--blue400);
+    &:focus {
+      outline: none;
+      box-shadow: 0 0 0px 1px var(--blue400);
+    }
   }
 }
 
-.time {
-  width: fit-content;
+.center {
+  text-align: center;
+}
+
+.right {
+  text-align: right;
+}
+
+.left {
+  text-align: left;
 }
