--- a/src/components/molecules/TimeEntry/TimeEntry.module.scss
+++ b/src/components/molecules/TimeEntry/TimeEntry.module.scss
@@ -2,7 +2,7 @@
   display: grid;
   gap: var(--space200);
   align-items: center;
-  grid-template-columns: minmax(150px, 250px) repeat(3, 60px);
+  grid-template-columns: minmax(150px, 250px) repeat(2, 60px) 40px;
 }
 
 .alignCenter {
