--- a/src/components/atoms/TextField/TextField.module.scss
+++ b/src/components/atoms/TextField/TextField.module.scss
@@ -7,6 +7,7 @@
     border: var(--border);
     border-radius: var(--borderRadius);
     transition: var(--transition300);
+    appearance: none;
 
     &:hover {
       border: 1px solid var(--blue300);
