--- a/src/components/organisms/NavBar/NavBar.module.scss
+++ b/src/components/organisms/NavBar/NavBar.module.scss
@@ -3,8 +3,10 @@
   width: 100%;
   background-color: var(--primaryColor);
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: var(--space400);
   color: white;
+  position: fixed;
+  top: 0;
 }
