--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@
   --blue300: #39a3e0;
   --blue400: #0782ca;
   --blue500: #0771af;
+  --grey100: #f5f5f5;
   --grey200: #efefef;
   --grey: #dfdfdf;
   --white: #ffffff;
@@ -57,6 +58,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1.3;
 }
 
 code {
