--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,8 @@
   --grey100: #f5f5f5;
   --grey200: #efefef;
   --grey: #dfdfdf;
+  --grey500: #999999;
+  --grey600: #777777;
   --white: #ffffff;
   --red400: #d10202;
   --red500: #ac0505;
