--- a/src/components/molecules/TimeField/TimeField.module.scss
+++ b/src/components/molecules/TimeField/TimeField.module.scss
@@ -1,14 +1,21 @@
 .main {
-  display: inline-flex;
+  display: flex;
+  align-items: center;
+  display: grid;
+  grid-template-columns: 20px 2px 20px;
+  gap: 2px;
 
   input {
     width: 100%;
-    padding: var(--space200);
+    padding: 6px 0;
     border-radius: var(--borderRadius);
     transition: var(--transition300);
     appearance: none;
     border: 1px solid transparent;
     background: transparent;
+    text-align: center;
+    border: 1px solid transparent;
+    line-height: 1.2;
 
     &:hover {
       border: 1px solid var(--blue300);
@@ -21,14 +28,8 @@
   }
 }
 
-.center {
-  text-align: center;
+.HH {
 }
 
-.right {
-  text-align: right;
-}
-
-.left {
-  text-align: left;
+.mm {
 }
